# Test_Demo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: linters.yml
scripts/: check_max_lines.py
test_demo/: hooks.py
test_demo/config/: desktop.py  docs.py
